fix: coder dark mode

--- a/packages/editor/src/Editor/plugins/nodes/coder/index.less
+++ b/packages/editor/src/Editor/plugins/nodes/coder/index.less
@@ -1,7 +1,7 @@
 .doc-coder {
     margin: 16px 0;
-    background: #f5f6f7;
-    border: 1px solid #e5e7eb;
+    background: var(--N50);
+    border: 1px solid var(--table-border-color);
     border-radius: 8px;
     overflow: hidden;
 
